--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@
     flex-direction: row-reverse;
     justify-content: space-between;
     align-items: center;
+    padding-right: 1em;
   }
 }
 
@@ -53,11 +54,11 @@
   color: black;
 }
 .menu__link:hover, .menu__link:active {
-  color: gray;
+  color: rgb(127.5, 127.5, 127.5);
   transition: all 0.3s ease-in-out;
 }
 .menu__link--active {
-  color: gray;
+  color: rgb(127.5, 127.5, 127.5);
 }
 
 .btn-link {
@@ -69,12 +70,13 @@
 .btn {
   overflow: hidden;
   position: relative;
+  border: none;
+  transition: background-color 0.2s ease;
   font-weight: 700;
   background-color: #1a34b8;
   color: white;
   padding: 1em 2em;
   border-radius: 0.5em;
-  border: none;
   text-align: center;
   width: 150px;
   height: 55px;
@@ -82,15 +84,25 @@
   margin-bottom: 1em;
 }
 .btn:hover, .btn:active {
-  background-color: #2544e0;
-  transform: scale(1.07);
-  transition: all 0.3s ease-in-out;
+  background-color: rgb(36.8285714286, 67.6571428571, 224.1714285714);
 }
 @media screen and (min-width: 680px) {
   .btn {
     width: 120px;
     height: 45px;
   }
+}
+
+.btn--secondary {
+  background-color: transparent;
+  color: #1a34b8;
+  border: 2px solid #1a34b8;
+}
+
+.btn--secondary:hover,
+.btn--secondary:active {
+  background-color: #1a34b8;
+  color: white;
 }
 
 .buttons {
@@ -212,21 +224,24 @@ button .circle {
 .hero {
   padding: 1em;
   background-color: rgb(235, 244, 243);
-  min-height: 320px;
+  min-height: 360px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  gap: 1em;
+  text-align: center;
   margin-bottom: 1em;
 }
 @media screen and (min-width: 680px) {
   .hero {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(4, auto);
-    justify-items: start;
-    align-items: center;
+    grid-template-columns: minmax(0, 1.1fr) minmax(0, 0.9fr);
+    grid-template-rows: auto auto auto auto;
+    -moz-column-gap: 2em;
+         column-gap: 2em;
+    align-items: start;
     border-radius: 0.5em;
-    padding-left: 100px;
+    padding: 2em;
+    text-align: left;
   }
 }
 .hero__lastname {
@@ -234,7 +249,11 @@ button .circle {
 }
 .hero__description {
   margin-bottom: 1em;
-  font-size: 1.5em;
+  font-size: 1.2em;
+  font-weight: 600;
+  letter-spacing: 0.02em;
+  color: #1a34b8;
+  line-height: 1.5;
   text-align: center;
 }
 @media screen and (min-width: 680px) {
@@ -244,9 +263,80 @@ button .circle {
     text-align: start;
   }
 }
+.hero__badges {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 0.25em;
+  margin: 0.25em 0 1em;
+}
+@media screen and (min-width: 680px) {
+  .hero__badges {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    justify-content: flex-start;
+    margin: 0.25em 0 1em;
+  }
+}
+.hero .description--hero {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+@media screen and (min-width: 680px) {
+  .hero .description--hero {
+    text-align: start;
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+.hero .badge {
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 0.25em 0.7em;
+  white-space: nowrap;
+  margin: 0;
+}
+.hero .title--hero {
+  font-size: 2.6em;
+  line-height: 1.1;
+  letter-spacing: 0.02em;
+  margin-top: 0;
+  text-align: center;
+}
+@media screen and (min-width: 680px) {
+  .hero .title--hero {
+    font-size: 3.4em;
+    text-align: start;
+  }
+}
+.hero .description {
+  max-width: 48ch;
+  line-height: 1.7;
+  text-align: center;
+  margin-bottom: 2em;
+}
+@media screen and (min-width: 680px) {
+  .hero .description {
+    text-align: start;
+    grid-column: 1/2;
+    grid-row: 4/5;
+  }
+}
+.hero .buttons {
+  margin-top: auto;
+}
+@media screen and (min-width: 680px) {
+  .hero .buttons {
+    grid-column: 1/2;
+    grid-row: 5/6;
+    align-self: start;
+  }
+}
 .hero__image {
-  display: block;
-  margin: 3em auto;
+  display: none;
+  margin: 2em auto 0;
   border-radius: 0.5em;
   max-width: 100%;
   background-color: #1a34b8;
@@ -254,16 +344,70 @@ button .circle {
 }
 @media screen and (min-width: 680px) {
   .hero__image {
-    margin: 0;
+    display: block;
     grid-column: 2/-1;
-    grid-row: 1/5;
-    justify-self: end;
+    grid-row: 1/-1;
+    justify-self: center;
+    align-self: center;
   }
 }
 
-.about {
+@media screen and (min-width: 680px) {
+  .buttons--hero {
+    justify-content: start;
+  }
+}
+
+.about,
+.ai,
+.tech,
+.free-time {
   padding: 1em;
-  margin: 3em;
+  margin: 1em;
+}
+
+.subtitle--about,
+.subtitle--ai,
+.subtitle--tech,
+.subtitle--free {
+  text-align: start;
+  color: #a112ac;
+  margin-bottom: 0.5em;
+}
+
+.ai-tools {
+  list-style: none;
+  padding: 0;
+  margin: 1.5rem 0;
+}
+
+.ai-tools li {
+  margin-bottom: 0.75rem;
+  line-height: 1.5;
+}
+
+.ai-tools strong {
+  font-weight: 600;
+}
+
+.tech-list {
+  list-style: none;
+  padding: 0;
+  margin: 1.5rem 0;
+}
+
+.tech-list li {
+  margin-bottom: 0.75rem;
+  line-height: 1.5;
+}
+
+.tech .accent {
+  font-weight: 600;
+}
+
+.tech .muted {
+  opacity: 0.7;
+  font-size: 0.9em;
 }
 
 .skills {
@@ -314,10 +458,6 @@ html {
   color: #1a34b8;
   font-size: 2em;
 }
-.subtitle--about {
-  text-align: center;
-  color: #a112ac;
-}
 .subtitle--projects {
   font-size: 1.8em;
 }
@@ -332,7 +472,7 @@ html {
 }
 
 .description {
-  font-size: 1.2em;
+  font-size: 1.1em;
   margin-bottom: 20px;
 }
 
