--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -16,6 +16,7 @@
         flex-direction: row-reverse;
         justify-content: space-between;
         align-items: center;
+        padding-right: variables.$spacer;
     }
 }
 
