--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,9 @@
 .footer {
   background-color: rgb(235, 244, 243);
   padding: 1em;
+  margin-left: -1em;
+  margin-right: -1em;
+  width: calc(100% + 2em);
 }
 @media screen and (min-width: 680px) {
   .footer {
@@ -162,15 +165,6 @@ button .circle {
   width: 200px;
 }
 
-.resume {
-  padding: 1em;
-}
-@media screen and (min-width: 680px) {
-  .resume {
-    padding: 0;
-  }
-}
-
 .card {
   border-radius: 0.5em;
   padding: 1em;
@@ -229,6 +223,9 @@ button .circle {
   flex-direction: column;
   gap: 1em;
   text-align: center;
+  margin-left: -1em;
+  margin-right: -1em;
+  width: calc(100% + 2em);
   margin-bottom: 1em;
 }
 @media screen and (min-width: 680px) {
@@ -417,7 +414,31 @@ button .circle {
   .skills {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    gap: 2em;
   }
+}
+
+.skill-group {
+  margin-bottom: 2em;
+}
+
+.skill-group h3 {
+  font-size: 1.1em;
+  margin-bottom: 1em;
+  color: #a112ac;
+}
+
+.skills .badge {
+  display: inline-block;
+  width: auto;
+  margin: 0 0 0.25em 0;
+  padding: 0.25em 0.6em;
+  font-size: 0.75em;
+  font-weight: 600;
+  text-transform: none;
+  letter-spacing: 0.02em;
+  background: rgba(26, 52, 184, 0.08);
+  color: #1a34b8;
 }
 
 html {
@@ -430,6 +451,9 @@ html {
   padding: 0;
 }
 
+.wrapper {
+  padding: 0 0.5em;
+}
 @media screen and (min-width: 680px) {
   .wrapper {
     margin: 0 auto;
