--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -5,6 +5,7 @@ html { box-sizing: border-box; }
 *, ::before, ::after { box-sizing: inherit; margin: 0; padding: 0; }
 
 .wrapper {
+    padding: 0 variables.$half-spacer;
 
     @include mixins.display-lg {
         margin: 0 auto;
