--- a/_includes/partials/footer.njk
+++ b/_includes/partials/footer.njk
@@ -1,16 +1,21 @@
 <footer class="footer">
-
-    <div class="icons">
-        <a href="https://www.linkedin.com/in/iveta-c%C3%ADrov%C3%A1-b8638424a/" class="icon-link"><img src="/icons/linkedin_social_icon.svg" alt="ikona linkedin" class="icon-image" width="40px"/></a>
-        <a href="https://github.com/icirova?tab=repositories" class="icon-link"><img src="/icons/github_icon.svg" alt="ikona gitHub" class="icon-image" width="40px" /></a>
-        <a href="https://twitter.com/IvetaCirova" class="icon-link"><img src="/icons/x_social_icon.svg" alt="ikona twitter" class="icon-image" width="40px" /></a>
+    <div class="footer__content">
+        <div class="footer__col">
+            <p class="footer__title">QA &amp; Frontend</p>
+            <p class="footer__note">
+                <span class="js-email" data-user="cirova.iveta" data-domain="ptw.cz"></span>
+            </p>
+        </div>
+        <div class="footer__col">
+            <div class="icons">
+                <a href="https://www.linkedin.com/in/iveta-c%C3%ADrov%C3%A1-b8638424a/" class="icon-link"><img src="/icons/linkedin_social_icon.svg" alt="ikona linkedin" class="icon-image" width="40px"/></a>
+                <a href="https://github.com/icirova?tab=repositories" class="icon-link"><img src="/icons/github_icon.svg" alt="ikona gitHub" class="icon-image" width="40px" /></a>
+                <a href="https://twitter.com/IvetaCirova" class="icon-link"><img src="/icons/x_social_icon.svg" alt="ikona twitter" class="icon-image" width="40px" /></a>
+            </div>
+        </div>
+        <div class="footer__col">
+            <p class="footer__description">© Iveta Círová</p>
+            <p class="footer__description footer__description--fine">Ikony: Iconfinder</p>
+        </div>
     </div>
-
-   
-    <p class="footer__description">Design inspirovaný šablonou Bootstrap. Zdrojem ikon je Iconfinder.</p>
-    <p class="footer__description">© Iveta Círová</p>
-   
-
-
-
 </footer>
