--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,6 +1,7 @@
-$color-primary: #1a34b8;
-$color-secondary: #a112ac;
-$color-supplementary:rgb(235, 244, 243);
+$color-primary: #5d25b3;
+$color-secondary: #5d25b3;
+$color-accent: #2f43b6;
+$color-supplementary: #f4f6f8;
 
 $default-font: 'Open Sans', sans-serif;
 $title-font: 'Montserrat', sans-serif;
