--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -4,7 +4,16 @@
 html { box-sizing: border-box; }
 *, ::before, ::after { box-sizing: inherit; margin: 0; padding: 0; }
 
+body {
+    min-height: 100vh;
+    line-height: 1.7;
+}
+
+
 .wrapper {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
     padding: 0 variables.$half-spacer;
 
     @include mixins.display-lg {
@@ -13,10 +22,18 @@ html { box-sizing: border-box; }
     }   
 }
 
+.main {
+    flex: 1;
+}
+
 .title {
     color:variables.$color-secondary;
     text-align: center;
-    font-size: 2.5em;
+    font-size: 2.4em;
+
+    @include mixins.display-lg {
+        font-size: 2.7em;
+    }
 
     &--hero {
         text-transform: uppercase;
@@ -33,13 +50,18 @@ html { box-sizing: border-box; }
 
 
 .subtitle {
-    color: variables.$color-primary;
-    font-size: 2em;
+    color: variables.$color-accent;
+    font-size: 1.6em;
+
+    @include mixins.display-lg {
+        font-size: 1.8em;
+    }
 
    
     
     &--projects {
-        font-size: 1.8em;
+        font-size: 1.25em;
+        margin-bottom: variables.$mini-spacer;
     }
     
     &--resume {
@@ -53,7 +75,8 @@ html { box-sizing: border-box; }
 }
 
 .description {
-    font-size: 1.1em;
+    font-size: 1.05em;
+    line-height: 1.7;
     margin-bottom: 20px;
 }
 
@@ -62,7 +85,7 @@ html { box-sizing: border-box; }
 }
 
 .link {
-    color: variables.$color-primary;
+    color: variables.$color-accent;
 
     &:hover,
     &:focus {
