--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,12 +1,6 @@
 @use '../abstracts/variables';
 @use '../abstracts/mixins';
 
-.btn-link {
-    text-decoration: none;
-    display: block;
-    color: white
-}
-
 .btn {
    
 
@@ -14,6 +8,10 @@
     overflow: hidden;
     position: relative;
     border: none;
+    text-decoration: none;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
     transition: background-color 0.2s ease;
   
 
@@ -25,7 +23,7 @@
 
     &:hover, 
     &:active {
-        background-color: lighten(variables.$color-primary, 10%);
+        background-color: lighten(variables.$color-accent, 10%);
     }
 
     @include mixins.display-lg {
@@ -37,13 +35,13 @@
 
 .btn--secondary {
     background-color: transparent;
-    color: variables.$color-primary;
-    border: 2px solid variables.$color-primary;
+    color: variables.$color-accent;
+    border: 2px solid variables.$color-accent;
 }
 
 .btn--secondary:hover,
 .btn--secondary:active {
-    background-color: variables.$color-primary;
+    background-color: lighten(variables.$color-accent, 10%);
     color: white;
 }
 
