--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -14,6 +14,7 @@
             gap: variables.$double-spacer;
             justify-content: space-between;
             align-items: center;
+            flex-wrap: wrap;
 
         }
 
@@ -49,6 +50,26 @@
         border-radius: variables.$half-spacer;
 
         @include mixins.m-bottom;
+    }
+
+    &__date--link {
+        background: none;
+        border: none;
+        padding: 0;
+    }
+
+    &__description,
+    .card-description {
+        @include mixins.display-lg {
+            flex: 1 1 60%;
+            min-width: 0;
+        }
+    }
+
+    &__description--meta {
+        @include mixins.display-lg {
+            flex-basis: 100%;
+        }
     }
 
     &--project {
