--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 @use 'pages/index';
 @use 'pages/cv';
 @use 'pages/kontakt';
+@use 'pages/projekty';
 
 @use 'base/base';
 @use 'base/typography';
