--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@
 
 .footer {
   background-color: #f4f6f8;
+  border-top: 1px solid rgba(93, 37, 179, 0.12);
   padding: 2em 1em;
   margin-left: -1em;
   margin-right: -1em;
@@ -23,7 +24,11 @@
 }
 @media screen and (min-width: 680px) {
   .footer {
-    border-radius: 0.5em;
+    border-radius: 0;
+    padding: 1em 1em;
+    margin-left: 0;
+    margin-right: 0;
+    width: 100%;
   }
 }
 .footer__content {
@@ -34,7 +39,7 @@
   width: 100%;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0 2em;
+  padding: 0 0.5em;
 }
 @media screen and (min-width: 680px) {
   .footer__content {
@@ -42,6 +47,7 @@
     grid-template-columns: repeat(3, minmax(0, 1fr));
     align-items: center;
     gap: 2em;
+    padding: 0 1em;
   }
 }
 .footer__title {
@@ -335,6 +341,7 @@ button .circle {
 .hero {
   padding: 1em;
   background-color: #f4f6f8;
+  border-top: 1px solid rgba(93, 37, 179, 0.12);
   min-height: 360px;
   display: flex;
   flex-direction: column;
@@ -353,9 +360,12 @@ button .circle {
     -moz-column-gap: 2em;
          column-gap: 2em;
     align-items: start;
-    border-radius: 0.5em;
+    border-radius: 0;
     padding: 2em;
     text-align: left;
+    margin-left: 0;
+    margin-right: 0;
+    width: 100%;
   }
 }
 .hero__description {
@@ -521,6 +531,15 @@ button .circle {
   font-size: 0.9em;
 }
 
+.resume {
+  padding: 1em;
+}
+@media screen and (min-width: 680px) {
+  .resume {
+    padding: 0 2em;
+  }
+}
+
 .skills {
   margin-bottom: 2em;
 }
@@ -592,6 +611,12 @@ button .circle {
   }
 }
 
+@media screen and (min-width: 680px) {
+  .project {
+    padding: 0 2em;
+  }
+}
+
 html {
   box-sizing: border-box;
 }
@@ -617,6 +642,7 @@ body {
   .wrapper {
     margin: 0 auto;
     max-width: 1200px;
+    padding: 0;
   }
 }
 
