--- a/sass/pages/_cv.scss
+++ b/sass/pages/_cv.scss
@@ -1,6 +1,14 @@
 @use '../abstracts/variables';
 @use '../abstracts/mixins';
 
+.resume {
+    padding: variables.$spacer;
+
+    @include mixins.display-lg {
+        padding: 0 variables.$double-spacer;
+    }
+}
+
 .skills {
     margin-bottom: variables.$double-spacer;
 
